# magic-haskell

./: CDK.cabal  COPYING  COPYRIGHT  ChangeLog  INSTALL  LDAP.cabal  LDAP.hs  Magic.hs  Makefile  MissingPy.cabal  README  exceptionlist  gencabal.py  genexceptions.hs  magic-1.0.8.tar.gz.delta  magic-1.0.8.tar.gz.id  magic.cabal
CDK/: Init.hs  Types.hs  Types.hsc
CDK/Widgets/: Entry.hs
LDAP/: Constants.hsc  Data.hsc  Exceptions.hs  Init.hsc  Modify.hsc  Result.hsc  Search.hsc  Types.hsc  TypesLL.hs  Utils.hsc
Magic/: Data.hsc  Init.hsc  Operations.hsc  Types.hsc  TypesLL.hs  Utils.hsc
MissingPy/: AnyDBM.hs
MissingPy/FileArchive/: BZip2.hs  GZip.hs
Python/: Exceptions.hs  ForeignImports.hsc  Instances.hs  Interpreter.hs  Interpreter.hsc  Objects.hs  Types.hs  Types.hsc  Utils.hs
Python/Exceptions/: ExcTypes.hsc
Python/Objects/: Dict.hs  File.hs
debian/: changelog  control  copyright  docs  rules
glue/: excglue.c  excglue.h  glue.c  glue.h  test.c
old/MissingPy/: AnyDBM.hs
old/MissingPy/FileArchive/: GZip.hs
old/Python/: Objects.hs
old/Python/Objects/: Dict.hs  File.hs
old/testsrc/: AnyDBMPytest.hs  Dicttest.hs  GZiptest.hs  Tests.hs  runtests.hs
old/testsrc/bz2files/: zeros.bz2
testsrc/: AnyDBMPytest.hs  BZip2test.hs  Dicttest.hs  Exceptionstest.hs  GZiptest.hs  Inittest.hs  Interpretertest.hs  Objectstest.hs  Tests.hs  runtests.hs
testsrc/bz2files/: t1.bz2  t2.bz2
utils/: genconsts.hs
