Extra-Libraries: ldap
-- End detected settings section.  Everything below here should not
-- need editing.
Name: CDK
Version: 0.2.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
C-Sources: glue/glue.c
Exposed-Modules: LDAP.Types,
 LDAP.Init,
 LDAP.Constants
--Other-Modules: Python.ForeignImports
Build-Depends: haskell-src
GHC-Options: -O2
CC-Options: -Iglue
Extensions: ForeignFunctionInterface, TypeSynonymInstances
