Extra-Libraries: ldap
-- End detected settings section.  Everything below here should not
-- need editing.
Name: LDAP
Version: 0.2.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
C-Sources: glue/glue.c
Exposed-Modules: LDAP,
 LDAP.Types,
 LDAP.Init,
 LDAP.Constants,
 LDAP.Data,
 LDAP.Exceptions,
 LDAP.Search,
 LDAP.Modify
Other-Modules: LDAP.Utils,
 LDAP.TypesLL,
 LDAP.Result
Build-Depends: haskell-src
GHC-Options: -O2
CC-Options: -Iglue
Extensions: ForeignFunctionInterface, TypeSynonymInstances
