-- arch-tag: MissingPy main description file
Name: MissingPy
Version: 0.8.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
C-Sources: glue/glue.c
Exposed-Modules: Python.Types,
 Python.Utils,
 Python.Objects,
 Python.Interpreter,
 Python.Exceptions,
 Python.Exceptions.ExcTypes,
 Python.Objects.File,
 MissingPy.FileArchive.GZip
Include-Dirs: /usr/include/python2.3, glue
Extra-Libs: python2.3
Build-Depends: haskell-src, MissingH
Options-GHC: -O2
Extensions: ForeignFunctionInterface, TypeSynonymInstances
