Extra-Libraries: magic
-- End detected settings section.  Everything below here should not
-- need editing.
Name: LDAP
Version: 0.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
-- C-Sources: glue/glue.c
Exposed-Modules: Magic,
 Magic.Data,
 Magic.Types,
 Magic.Init,
 Magic.Operations
Other-Modules: Magic.Utils,
 Magic.TypesLL
Build-Depends: haskell-src
GHC-Options: -O2
-- CC-Options: -Iglue
Extensions: ForeignFunctionInterface, TypeSynonymInstances
